[package]
name = "pypi"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["cargo"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io"] }
