[package]
name = "pypi"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["alloc"] }
clap = { version = "4.6.1", features = ["cargo"] }
md-5 = "0.11.0"
mime = "0.3.17"
minijinja = "2.19.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
