[package]
name = "wsgi"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["cargo"] }
ctrlc = "3.5.2"
httparse = "1.10.1"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
