[package]
name = "rss2md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
atom_syndication = "0.12.7"
chrono = "0.4.44"
html2md = { path = "../../scraper/html2md" }
rss = "2.0.12"
scraper = "0.26.0"
